test/fail_compilation/fail293.d
void main() {
   auto c = [1,2,3]-[1,2,3]; // not implemented yet
}
